--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "bootstrap": "^4.4.1",
     "enzyme": "^3.11.0",
     "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "jest": "^24.9.0",
     "jest-enzyme": "^7.1.2",
+    "path": "^0.12.7",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -24,7 +26,8 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
