--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jest": "^24.9.0",
     "jest-enzyme": "^7.1.2",
     "path": "^0.12.7",
+    "enzyme-adapter-react-16": "^1.15.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -23,7 +24,8 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "react-test-renderer": "^16.13.1"
   },
   "scripts": {
     "start": "node server.js",
