--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
-    "enzyme": "^3.11.0",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "jest": "^24.9.0",
     "jest-enzyme": "^7.1.2",
     "path": "^0.12.7",
-    "enzyme-adapter-react-16": "^1.15.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -22,10 +20,10 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
-    "react-test-renderer": "^16.13.1"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "node server.js",
@@ -48,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2"
   }
 }
