--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "express-favicon": "^2.0.1",
     "jest": "^24.9.0",
     "jest-enzyme": "^7.1.2",
+    "node-sass": "^4.14.0",
     "path": "^0.12.7",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
