--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-favicon": "^2.0.1",
     "jest": "^24.9.0",
     "jest-enzyme": "^7.1.2",
+    "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.14.0",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
@@ -23,6 +24,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.8.3",
     "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
