--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "3.4.1",
     "react-spinners": "^0.8.3",
     "react-test-renderer": "^16.13.1",
+    "react-toastify": "^6.0.6",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
