--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-images-upload": "^1.2.8",
     "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
