--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "jest": "^24.9.0",
@@ -19,6 +20,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-images-upload": "^1.2.8",
     "react-loader-spinner": "^3.1.14",
